# peregrine-eard

./: .gitlab-ci.yml  .gitlab.yml  Cargo.toml  Dockerfile  coverage.txt
compiler/: Cargo.toml
compiler-lib/src/: lib.rs
compiler-libeoe/: Cargo.toml
compiler-libeoe/src/: lib.rs  parser.rs  parsetree.rs  struct.pest  structmacro.rs
compiler-libperegrine/: Cargo.toml
compiler-libperegrine/src/: colour.rs  lib.rs  style.pest  style.rs
compiler/src/: config.rs  main.rs
docs/: compiler.md  earp.md  library-ref-source.txt  prefixes.md
eard-compiler/: Cargo.toml
eard-compiler-lib/: Cargo.toml
eard-compiler-lib/docs/: earp.md  prefixes.md
eard-compiler-lib/src/: codeblocks.rs  compilation.rs  compiled.rs  compiler.rs  equiv.rs  generate.rs  lib.rs  model.rs  reorder.rs  reuse.rs  serialise.rs  spill.rs  test.rs  testharness.rs
eard-file-extension/: CHANGELOG.md  README.md  package.json  vsc-extension-quickstart.md
eard-interp/: Cargo.toml
eard-interp-cli/: Cargo.toml  smoke.eard  smoke.eardo
interp/: Cargo.toml
interp-cli/: Cargo.toml  smoke.eardo
interp-cli/src/: main.rs
libeoe/: Cargo.toml
libperegrine-stub/: Cargo.toml
src/: broadtyping.rs  buildtree.rs  buildtreebuilder.rs  buildunbundle.rs  checking.rs  codeblocks.rs  compilation.rs  compiler.rs  constfold.rs  culdesac.rs  earp.pest  equiv.rs  generate.rs  lib.rs  model.rs  narrowtyping.rs  parser.rs  parsetree.rs  preprocess.rs  reduce.rs  reorder.rs  repeater.rs  reuse.rs  source.rs  spill.rs  test.rs  testharness.rs  toposort.rs  typing.rs  unbundle.rs  unbundleaux.rs
(+272 files in other folders)
