[package]
name = "eard-interp-cli"
version = "0.0.0"
authors = ["ensembl-webteam@ebi.ac.uk"]
edition = "2018"

[dependencies]
anyhow = "*"
clap = { version = "4", features = ["derive"] }
async-std="*"
serde_json="*"

[dependencies.eard-interp]
path = "../interp"

[dependencies.eard-libperegrine-stub]
path = "../libperegrine-stub"
